# AI-Spec-Driven-Book

./: .gitignore  CLAUDE.md  Readme.md  package-lock.json  package.json  replace-3.txt
.claude/: settings.local.json
fullstack/backend/: .env.example  .gitignore  README.md  agent.py  main.py  pyproject.toml  retrieves.py
fullstack/backend/test/: qdrant_get_collections.py  test_agent.py  test_main.py  test_pipeline.py  test_retrieves.py
fullstack/frontend-book/: docusaurus.config.js  sidebars.js
history/prompts/001-embedding-pipeline/: 1-embedding-pipeline-setup.spec.prompt.md  2-embedding-pipeline-plan.plan.prompt.md  3-embedding-pipeline-tasks.tasks.prompt.md  (+1 more)
specs/001-docusaurus-rag-ingestion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-hardware-lab/: data-model.md  plan.md  research.md  spec.md
specs/001-hardware-lab/checklists/: requirements.md
specs/001-isaac-ai-robot-brain/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rag-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ros2-robot-control/: spec.md
specs/002-digital-twin-sim/: plan.md  spec.md
specs/013-rag-agent-sdk/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/03-digital-twin-simulation/: spec.md
specs/04-perception-systems/: spec.md
specs/05-isaac-ai-robot-brain/: spec.md
specs/06-hardware-lab/: quickstart.md  tasks.md
specs/06-vla-humanoid-robotics/: spec.md
specs/08-vla-integration/: spec.md
specs/12-capstone-humanoid/: spec.md
(+41 files in other folders)
